2007-11-30  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/debugengine.cpp: Small fix to use painter.

	* -libavogadro/src/engines/axesengine.*,
	libavogadro/src/engines/CMakeLists.txt, libavogadro/src/glwidget.*,
	avogadro/src/settingsdialog.*, avogadro/src/mainwindow.*: Moved the
	axes engine to the GLWidget where it belongs. Added a global
	configuration option for it too.

	* libavogadro/src/camera.h, libavogadro/src/color.h,
	libavogadro/src/engine.h: Fixed up the documentation a little.

	* libavogadro/src/engines/ringengine.cpp,
	libavogadro/src/engines/ringsettingswidget.ui: Make the rings opaque by
	default.

	* avogadro/src/mainwindow.h: Fix the API documentation title.

2007-11-30  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/primitiveitemmodel.cpp: Add back missing
	functionality from MoleculeTreeView. Atoms now have elements,
	residues have names and numbers, etc. May need further tinkering.

	* libavogadro/src/tools/drawtool.cpp: Minor changes to SMILES
	text.

	* libavogadro/src/tools/autoopttool.cpp: Remove "OBPatched"
	ifdefs. These are now all supported in OB-2.2.

	* libavogadro/src/residuecolor.[h,cpp]: New class to color based
	on Jmol "amino" residue colors.

	* libavogadro/src/color.h, libavogadro/src/elementcolor.h: Updates
	missing in yesterday's commit. Include a settings widget for
	expansion in subclasses.

2007-11-29  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/color.[h,cpp]: Make into a cleaner base class
	for custom color maps. Add a name() property to return the
	user-visible name of the color scheme.

	* libavogadro/src/elementcolor.[h,cpp]: New subclass for the
	default scheme.

	* libavogadro/src/engine.[h,cpp]: Revise colorMap() routines to
	pass pointers to preserve subclasses.

	* libavogadro/src/engines/*.cpp: Fix engines to use new colorMap
	support, including fallback between custom (i.e., per-engine) and